# asana-tui

./: .clippy.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
benches/: custom_fields.rs  text_processing.rs
src/: app.rs  config.rs  error.rs  logger.rs  main.rs  state.rs
src/asana/: client.rs  custom_fields.rs  error.rs  mod.rs  models.rs  resource.rs
src/config/: error.rs  hotkeys.rs  mod.rs
src/events/: mod.rs  network.rs  terminal.rs
src/state/: error.rs  form.rs  mod.rs  navigation.rs  state_impl.rs
src/ui/: mod.rs  theme.rs
src/ui/render/: all.rs  create_task.rs  edit_task.rs  footer.rs  form_dropdowns.rs  hotkey_editor.rs  kanban.rs  log.rs  main.rs  mod.rs  shortcuts.rs  status.rs  task_detail.rs  top_list.rs  welcome.rs
src/ui/widgets/: color.rs  mod.rs  spinner.rs  styling.rs
src/utils/: mod.rs  text_processing.rs
