[package]
name = "asana-tui"
description = "A terminal user interface for Asana"
repository = "https://github.com/bej-cofrancesco/asana-tui"
keywords = ["asana", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "1.0.0"
authors = ["Benjamin Cofrancesco <benjamin@cofrancesco.com>"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.47"
chrono = "0.4.19"
clap = "2.33.3"
clipboard = "0.5"
crossterm = "0.27"
dirs = "4.0.0"
fake = { version = "2.4.3", features = ["derive", "uuid"] }
log = "0.4.14"
rand = "0.8.4"
regex = "1.10"
reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
serde_yaml = "0.8.21"
tokio = { version = "1.15", features = ["full"] }
ratatui = { version = "0.26", default-features = false, features = [
  "crossterm",
] }
ratatui-image = "0.3"
tui-textarea = "0.4"
tui-logger = "0.6.6"

[dev-dependencies]
httpmock = "0.6.4"
uuid = "0.8.2"
